--- a/FastFoodChain16/FastFoodChain16/Views/NguoiDung/ListUser.cshtml
+++ b/FastFoodChain16/FastFoodChain16/Views/NguoiDung/ListUser.cshtml
@@ -7,8 +7,9 @@
 
 <p>
     <a asp-action="ListProduct" asp-controller="SanPham">ListProduct</a>
-  <a asp-action="ListUser" asp-controller="NguoiDung">ListUser</a>
-  <a asp-action="ThongKeSLSP" asp-controller="ThongKe">Statistical</a>
+    <a asp-action="ListUser" asp-controller="NguoiDung">ListUser</a>
+    <a asp-action="ThongKeSLSP" asp-controller="ThongKe">Statistical Product</a>
+    <a asp-action="ThongKeDT" asp-controller="ThongKe">Statistical Revenue</a>
 </p>
 <h1 style="text-align:center">DANH SÁCH TÀI KHOẢN</h1>
 
