--- a/FastFoodChain16/FastFoodChain16/Views/ThongKe/ThongKeSLSP.cshtml
+++ b/FastFoodChain16/FastFoodChain16/Views/ThongKe/ThongKeSLSP.cshtml
@@ -6,7 +6,8 @@
 <p>
     <a asp-action="ListProduct" asp-controller="SanPham">ListProduct</a>
   <a asp-action="ListUser" asp-controller="NguoiDung">ListUser</a>
-  <a asp-action="ThongKeSLSP" asp-controller="ThongKe">Statistical</a>
+  <a asp-action="ThongKeSLSP" asp-controller="ThongKe">Statistical Product</a>
+  <a asp-action="ThongKeDT" asp-controller="ThongKe">Statistical Revenue</a>
 </p>
 <h1 style="text-align:center;font-weight:bold;">THỐNG KÊ SỐ LƯỢNG SẢN PHẨM BÁN TRONG THÁNG</h1>
 <head>
