--- a/FastFoodChain16/FastFoodChain16/Views/KhachHang/ListProduct.cshtml
+++ b/FastFoodChain16/FastFoodChain16/Views/KhachHang/ListProduct.cshtml
@@ -5,9 +5,11 @@
     Layout = null;
 }
 
-<h1 style="text-align:center;font-weight:bold;">MENU SẢN PHẨM</h1>
+<h1 style="text-align:center;font-weight:bold;">MENU</h1>
 <div>
-    <a asp-action="XemDH" asp-controller="KhachHang">Thông tin đơn hàng đã đặt</a>
+    <a asp-action="XemDH" asp-controller="KhachHang">Thông tin đơn hàng đã đặt  </a>
+    <a asp-action="ListCart" asp-controller="Cart">| Giỏ hàng</a>
+    <a asp-action="Login" asp-controller="KhachHang">| Đăng xuất</a>
 </div>
 <head>
     <style type="text/css">
