--- a/FastFoodChain16/FastFoodChain16/Views/ThongKe/ThongKeDT.cshtml
+++ b/FastFoodChain16/FastFoodChain16/Views/ThongKe/ThongKeDT.cshtml
@@ -6,9 +6,10 @@
 }
 
 <a asp-action="ListProduct" asp-controller="SanPham">ListProduct</a>
-<a asp-action="ListUser" asp-controller="NguoiDung">ListUser</a>
-<a asp-action="ThongKeSLSP" asp-controller="ThongKe">Statistical Product</a>
-<a asp-action="ThongKeDT" asp-controller="ThongKe">Statistical Revenue</a>
+<a asp-action="ListUser" asp-controller="NguoiDung">| ListUser</a>
+<a asp-action="ThongKeSLSP" asp-controller="ThongKe">| Statistical Product</a>
+<a asp-action="ThongKeDT" asp-controller="ThongKe">| Statistical Revenue</a>
+<a asp-action="Login" asp-controller="KhachHang">| Đăng xuất</a>
 
 <h1 style="text-align:center;font-weight:bold;">THỐNG KÊ DOANH THU TRONG THÁNG</h1>
 
