--- a/FastFoodChain16/FastFoodChain16/Views/KhachHang/Create.cshtml
+++ b/FastFoodChain16/FastFoodChain16/Views/KhachHang/Create.cshtml
@@ -2,11 +2,12 @@
 
 @{
     ViewData["Title"] = "Create";
+    
 }
 
-<h1>Create</h1>
+<h1 style="text-align:center;font-weight:bold;">TẠO MỚI TÀI KHOẢN</h1>
 
-<h4>KhachHang</h4>
+<h4>Thông tin tài khoản</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -26,6 +27,10 @@
                 <label asp-for="Sdt" class="control-label"></label>
                 <input asp-for="Sdt" class="form-control" />
                 <span asp-validation-for="Sdt" class="text-danger"></span>
+@*                @if (ViewData["Loi"] != null)
+                {
+                    <div class="text-danger">@ViewData["Loi"]</div>
+                }*@
             </div>
             <div class="form-group">
                 <label asp-for="Email" class="control-label"></label>
@@ -38,14 +43,18 @@
                 <span asp-validation-for="DiaChi" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Tiếp" class="btn btn-primary" />
             </div>
+             @if (ViewData["Loi"] != null)
+                {
+                    <div class="text-danger">@ViewData["Loi"]</div>
+                }
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Login">Quay lại</a>
 </div>
 
 @section Scripts {
