--- a/FastFoodChain16/FastFoodChain16/Views/KhachHang/CreateTK.cshtml
+++ b/FastFoodChain16/FastFoodChain16/Views/KhachHang/CreateTK.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "CreateTK";
     Layout = null;
 }
-<h1>CreateTK</h1>
+<h1 style="text-align:center;font-weight:bold;">TẠO MỚI TÀI KHOẢN</h1>
 
-<h4>TaiKhoan</h4>
+<h4>Thông tin đăng nhập</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -23,16 +23,25 @@
                 <span asp-validation-for="MatKhau" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Đăng ký" class="btn btn-primary" />
             </div>
+            @if (ViewData["Loi1"] != null)
+            {
+                <div class="text-danger">@ViewData["Loi1"]</div>
+            }
+            
+            @if (ViewData["Loi2"] != null)
+            {
+                <div class="text-danger">@ViewData["Loi2"]</div>
+            }
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
+@*<div>
+    <a asp-action="Create" asp-controller="KhachHang">Quay lại</a>
 </div>
-
+*@
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
