--- a/FastFoodChain16/FastFoodChain16/Views/SanPham/Create.cshtml
+++ b/FastFoodChain16/FastFoodChain16/Views/SanPham/Create.cshtml
@@ -14,17 +14,16 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="MaLoai" class="control-label"></label>
-               @*  <select asp-for="MaLoai" class ="form-control" asp-items="ViewBag.MaLoai"></select> *@
+               <label asp-for="MaLoai" class="control-label"></label>
                 <input asp-for="MaLoai" class="form-control" />
                 <span asp-validation-for="MaLoai" class="text-danger"></span>
+
             </div>
             <div class="form-group">
                 <label asp-for="MaNcc" class="control-label"></label>
-               @*  <select asp-for="MaNcc" class ="form-control" asp-items="ViewBag.MaNcc"></select> *@
                 <input asp-for="MaNcc" class="form-control" />
                 <span asp-validation-for="MaNcc" class="text-danger"></span>
-            </div>
+              </div>
             <div class="form-group">
                 <label asp-for="TenSp" class="control-label"></label>
                 <input asp-for="TenSp" class="form-control" />
@@ -43,6 +42,7 @@
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
+               <div>@ViewBag.Thongbao</div>
         </form>
     </div>
 </div>
