--- a/FastFoodChain16/FastFoodChain16/Views/_ViewStart.cshtml
+++ b/FastFoodChain16/FastFoodChain16/Views/_ViewStart.cshtml
@@ -1,3 +1,4 @@
 ﻿@{
-    Layout = "_Layout";
+    Layout = null;
 }
+@*<h1 style="text-align:center;font-weight:bold;">CHÀO MỪNG BẠN ĐẾN VỚI THIÊN ĐƯỜNG FASTFOOD</h1>*@
